Added favorites + Modified Navbar Animation

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,21 +51,56 @@ nav ul li {
   margin: 1em;
   display: flex;
   align-items: center;
+  position: relative;
+}
+nav ul li:not(nav ul li.notHover)::before {
+  content: "";
+  position: absolute;
+  top: -10%;
+  height: 48%;
+  transform: scaleY(0) skew(-15deg);
+  width: 100%;
+  background: #2196f3;
+  z-index: 4;
+  transform-origin: top;
+  transition: transform 0.2s ease-in-out;
+}
+nav ul li:hover:not(nav ul li.notHover)::before {
+  transform: scaleY(1) skew(-15deg);
+}
+nav ul li:not(nav ul li.notHover)::after {
+  content: "";
+  position: absolute;
+  bottom: 20%;
+  height: 48%;
+  transform: scaleY(0) skew(-15deg);
+  width: 100%;
+  background: #2196f3;
+  z-index: 4;
+  transform-origin: bottom;
+  transition: transform 0.2s ease-in-out;
+}
+nav ul li:hover:not(nav ul li.notHover)::after {
+  transform: scaleY(1) skew(-15deg);
 }
 nav ul li a {
   padding: 0.1em 0.5em 1em 0.5em;
   white-space: nowrap;
   color: #fff;
   cursor: pointer;
+  z-index: 5;
+  transition: color 0.2s ease-in-out;
+}
+nav ul li .header-account--img {
+  height: 30px;
+  border-radius: 50%;
 }
 
 ul.dropdown-content {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 100%;
   display: none;
   justify-content: space-evenly;
   flex-direction: column;
@@ -108,6 +143,7 @@ ul.dropdown-content li:hover a.red, ul.dropdown-content li:hover button.red {
   color: #ef5350;
 }
 ul.dropdown-content li a, ul.dropdown-content li button {
+  white-space: nowrap;
   cursor: pointer;
   color: #000;
   font-weight: 400;
@@ -993,6 +1029,10 @@ form a {
   flex-direction: column;
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
 .flex-wrap {
   flex-wrap: wrap;
 }
@@ -1610,6 +1650,9 @@ form .form-row button {
 }
 .gradient_content_header p, .gradient_content_header div > span {
   font-family: "Montserrat", sans-serif;
+}
+.gradient_content_header svg {
+  cursor: pointer;
 }
 .gradient_content_header__title {
   font-weight: bold;
