--- a/resources/sass/_gradients.scss
+++ b/resources/sass/_gradients.scss
@@ -27,6 +27,10 @@
                 @include font('Montserrat');
             }
 
+            svg{
+                cursor: pointer;
+            }
+
 
             &__title{
                 font-weight: bold;
