Added Submit gradient v1

--- a/resources/sass/_flex.scss
+++ b/resources/sass/_flex.scss
@@ -13,6 +13,9 @@
 .flex-cent{
     justify-content: center;
 }
+.flex-end{
+    justify-content: flex-end;
+}
 .flex-even{
     justify-content: space-evenly;
 }
