--- a/public/css/style.css
+++ b/public/css/style.css
@@ -582,19 +582,19 @@ form a {
 }
 
 .mt-0 {
-  margin: 0rem !important;
+  margin-top: 0rem !important;
 }
 
 .mr-0 {
-  margin: 0rem !important;
+  margin-right: 0rem !important;
 }
 
 .mb-0 {
-  margin: 0rem !important;
+  margin-bottom: 0rem !important;
 }
 
 .ml-0 {
-  margin: 0rem !important;
+  margin-left: 0rem !important;
 }
 
 .m-05 {
@@ -602,19 +602,19 @@ form a {
 }
 
 .mt-05 {
-  margin: 0.5rem !important;
+  margin-top: 0.5rem !important;
 }
 
 .mr-05 {
-  margin: 0.5rem !important;
+  margin-right: 0.5rem !important;
 }
 
 .mb-05 {
-  margin: 0.5rem !important;
+  margin-bottom: 0.5rem !important;
 }
 
 .ml-05 {
-  margin: 0.5rem !important;
+  margin-left: 0.5rem !important;
 }
 
 .m-1 {
@@ -622,19 +622,19 @@ form a {
 }
 
 .mt-1 {
-  margin: 1rem !important;
+  margin-top: 1rem !important;
 }
 
 .mr-1 {
-  margin: 1rem !important;
+  margin-right: 1rem !important;
 }
 
 .mb-1 {
-  margin: 1rem !important;
+  margin-bottom: 1rem !important;
 }
 
 .ml-1 {
-  margin: 1rem !important;
+  margin-left: 1rem !important;
 }
 
 .m-15 {
@@ -642,19 +642,19 @@ form a {
 }
 
 .mt-15 {
-  margin: 1.5rem !important;
+  margin-top: 1.5rem !important;
 }
 
 .mr-15 {
-  margin: 1.5rem !important;
+  margin-right: 1.5rem !important;
 }
 
 .mb-15 {
-  margin: 1.5rem !important;
+  margin-bottom: 1.5rem !important;
 }
 
 .ml-15 {
-  margin: 1.5rem !important;
+  margin-left: 1.5rem !important;
 }
 
 .m-2 {
@@ -662,19 +662,19 @@ form a {
 }
 
 .mt-2 {
-  margin: 2rem !important;
+  margin-top: 2rem !important;
 }
 
 .mr-2 {
-  margin: 2rem !important;
+  margin-right: 2rem !important;
 }
 
 .mb-2 {
-  margin: 2rem !important;
+  margin-bottom: 2rem !important;
 }
 
 .ml-2 {
-  margin: 2rem !important;
+  margin-left: 2rem !important;
 }
 
 .m-25 {
@@ -682,19 +682,19 @@ form a {
 }
 
 .mt-25 {
-  margin: 2.5rem !important;
+  margin-top: 2.5rem !important;
 }
 
 .mr-25 {
-  margin: 2.5rem !important;
+  margin-right: 2.5rem !important;
 }
 
 .mb-25 {
-  margin: 2.5rem !important;
+  margin-bottom: 2.5rem !important;
 }
 
 .ml-25 {
-  margin: 2.5rem !important;
+  margin-left: 2.5rem !important;
 }
 
 .m-3 {
@@ -702,19 +702,19 @@ form a {
 }
 
 .mt-3 {
-  margin: 3rem !important;
+  margin-top: 3rem !important;
 }
 
 .mr-3 {
-  margin: 3rem !important;
+  margin-right: 3rem !important;
 }
 
 .mb-3 {
-  margin: 3rem !important;
+  margin-bottom: 3rem !important;
 }
 
 .ml-3 {
-  margin: 3rem !important;
+  margin-left: 3rem !important;
 }
 
 .m-35 {
@@ -722,19 +722,19 @@ form a {
 }
 
 .mt-35 {
-  margin: 3.5rem !important;
+  margin-top: 3.5rem !important;
 }
 
 .mr-35 {
-  margin: 3.5rem !important;
+  margin-right: 3.5rem !important;
 }
 
 .mb-35 {
-  margin: 3.5rem !important;
+  margin-bottom: 3.5rem !important;
 }
 
 .ml-35 {
-  margin: 3.5rem !important;
+  margin-left: 3.5rem !important;
 }
 
 .m-4 {
@@ -742,19 +742,19 @@ form a {
 }
 
 .mt-4 {
-  margin: 4rem !important;
+  margin-top: 4rem !important;
 }
 
 .mr-4 {
-  margin: 4rem !important;
+  margin-right: 4rem !important;
 }
 
 .mb-4 {
-  margin: 4rem !important;
+  margin-bottom: 4rem !important;
 }
 
 .ml-4 {
-  margin: 4rem !important;
+  margin-left: 4rem !important;
 }
 
 .m-45 {
@@ -762,19 +762,19 @@ form a {
 }
 
 .mt-45 {
-  margin: 4.5rem !important;
+  margin-top: 4.5rem !important;
 }
 
 .mr-45 {
-  margin: 4.5rem !important;
+  margin-right: 4.5rem !important;
 }
 
 .mb-45 {
-  margin: 4.5rem !important;
+  margin-bottom: 4.5rem !important;
 }
 
 .ml-45 {
-  margin: 4.5rem !important;
+  margin-left: 4.5rem !important;
 }
 
 .m-5 {
@@ -782,19 +782,19 @@ form a {
 }
 
 .mt-5 {
-  margin: 5rem !important;
+  margin-top: 5rem !important;
 }
 
 .mr-5 {
-  margin: 5rem !important;
+  margin-right: 5rem !important;
 }
 
 .mb-5 {
-  margin: 5rem !important;
+  margin-bottom: 5rem !important;
 }
 
 .ml-5 {
-  margin: 5rem !important;
+  margin-left: 5rem !important;
 }
 
 .m-55 {
@@ -802,19 +802,19 @@ form a {
 }
 
 .mt-55 {
-  margin: 5.5rem !important;
+  margin-top: 5.5rem !important;
 }
 
 .mr-55 {
-  margin: 5.5rem !important;
+  margin-right: 5.5rem !important;
 }
 
 .mb-55 {
-  margin: 5.5rem !important;
+  margin-bottom: 5.5rem !important;
 }
 
 .ml-55 {
-  margin: 5.5rem !important;
+  margin-left: 5.5rem !important;
 }
 
 .m-6 {
@@ -822,19 +822,19 @@ form a {
 }
 
 .mt-6 {
-  margin: 6rem !important;
+  margin-top: 6rem !important;
 }
 
 .mr-6 {
-  margin: 6rem !important;
+  margin-right: 6rem !important;
 }
 
 .mb-6 {
-  margin: 6rem !important;
+  margin-bottom: 6rem !important;
 }
 
 .ml-6 {
-  margin: 6rem !important;
+  margin-left: 6rem !important;
 }
 
 .m-65 {
@@ -842,19 +842,19 @@ form a {
 }
 
 .mt-65 {
-  margin: 6.5rem !important;
+  margin-top: 6.5rem !important;
 }
 
 .mr-65 {
-  margin: 6.5rem !important;
+  margin-right: 6.5rem !important;
 }
 
 .mb-65 {
-  margin: 6.5rem !important;
+  margin-bottom: 6.5rem !important;
 }
 
 .ml-65 {
-  margin: 6.5rem !important;
+  margin-left: 6.5rem !important;
 }
 
 .m-7 {
@@ -862,19 +862,19 @@ form a {
 }
 
 .mt-7 {
-  margin: 7rem !important;
+  margin-top: 7rem !important;
 }
 
 .mr-7 {
-  margin: 7rem !important;
+  margin-right: 7rem !important;
 }
 
 .mb-7 {
-  margin: 7rem !important;
+  margin-bottom: 7rem !important;
 }
 
 .ml-7 {
-  margin: 7rem !important;
+  margin-left: 7rem !important;
 }
 
 .m-75 {
@@ -882,19 +882,19 @@ form a {
 }
 
 .mt-75 {
-  margin: 7.5rem !important;
+  margin-top: 7.5rem !important;
 }
 
 .mr-75 {
-  margin: 7.5rem !important;
+  margin-right: 7.5rem !important;
 }
 
 .mb-75 {
-  margin: 7.5rem !important;
+  margin-bottom: 7.5rem !important;
 }
 
 .ml-75 {
-  margin: 7.5rem !important;
+  margin-left: 7.5rem !important;
 }
 
 .m-8 {
@@ -902,19 +902,19 @@ form a {
 }
 
 .mt-8 {
-  margin: 8rem !important;
+  margin-top: 8rem !important;
 }
 
 .mr-8 {
-  margin: 8rem !important;
+  margin-right: 8rem !important;
 }
 
 .mb-8 {
-  margin: 8rem !important;
+  margin-bottom: 8rem !important;
 }
 
 .ml-8 {
-  margin: 8rem !important;
+  margin-left: 8rem !important;
 }
 
 .m-85 {
@@ -922,19 +922,19 @@ form a {
 }
 
 .mt-85 {
-  margin: 8.5rem !important;
+  margin-top: 8.5rem !important;
 }
 
 .mr-85 {
-  margin: 8.5rem !important;
+  margin-right: 8.5rem !important;
 }
 
 .mb-85 {
-  margin: 8.5rem !important;
+  margin-bottom: 8.5rem !important;
 }
 
 .ml-85 {
-  margin: 8.5rem !important;
+  margin-left: 8.5rem !important;
 }
 
 .m-9 {
@@ -942,19 +942,19 @@ form a {
 }
 
 .mt-9 {
-  margin: 9rem !important;
+  margin-top: 9rem !important;
 }
 
 .mr-9 {
-  margin: 9rem !important;
+  margin-right: 9rem !important;
 }
 
 .mb-9 {
-  margin: 9rem !important;
+  margin-bottom: 9rem !important;
 }
 
 .ml-9 {
-  margin: 9rem !important;
+  margin-left: 9rem !important;
 }
 
 .m-95 {
@@ -962,19 +962,19 @@ form a {
 }
 
 .mt-95 {
-  margin: 9.5rem !important;
+  margin-top: 9.5rem !important;
 }
 
 .mr-95 {
-  margin: 9.5rem !important;
+  margin-right: 9.5rem !important;
 }
 
 .mb-95 {
-  margin: 9.5rem !important;
+  margin-bottom: 9.5rem !important;
 }
 
 .ml-95 {
-  margin: 9.5rem !important;
+  margin-left: 9.5rem !important;
 }
 
 /*=======================================
@@ -1015,6 +1015,10 @@ form a {
 
 .flex-cent {
   justify-content: center;
+}
+
+.flex-end {
+  justify-content: flex-end;
 }
 
 .flex-even {
@@ -1279,7 +1283,7 @@ form a {
   transition: transform 0.2s ease-out;
 }
 .btn:hover .btn__left, .btn:hover .btn__right {
-  transform: scaleY(1.5);
+  transform: scaleY(1.3);
 }
 
 /*==============================================
@@ -1469,6 +1473,7 @@ form a {
   margin-bottom: 2rem;
   line-height: 1.5;
   color: rgba(0, 0, 0, 0.8);
+  min-width: 400px;
 }
 .modal__btn {
   font-size: 0.875rem;
@@ -1629,6 +1634,7 @@ form .form-row button {
 .gradient {
   margin-bottom: 4em;
   width: 30%;
+  min-width: 450px;
   background: #fff;
   color: #000;
   position: relative;
@@ -1710,6 +1716,12 @@ form .form-row button {
   width: 90%;
   margin-right: auto;
   margin-left: auto;
+}
+.gradient_panel__body svg {
+  pointer-events: none;
+}
+.gradient_panel__body svg path {
+  pointer-events: none;
 }
 .gradient_panel__body_color {
   margin: 0.2em;
