--- a/resources/sass/_button.scss
+++ b/resources/sass/_button.scss
@@ -60,6 +60,10 @@
         transition: transform 0.2s ease-out;
     }
 
+    &-red{
+        background: #f44336;
+    }
+
 
     &:hover{
         .btn__left, .btn__right{
