--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -19,6 +19,14 @@ body,html{
 }
 
 
+$alternateColor: #2196f3;
+@mixin gradientAnim($size: 200%){
+    background: $alternateColor;
+    background: linear-gradient(to right, #00d2ff, #3a7bd5, #00d2ff);
+    background-size: $size 100%;
+    animation: li_anim 2s linear forwards infinite;
+}
+
 
 /*============================
     Globals
@@ -37,9 +45,6 @@ a {
 }
 nav {
     position: relative;
-    //top: 0;
-    //left: 0;
-    //right: 0;
     display: flex;
     justify-content: space-between;
     z-index: 9999;
@@ -55,41 +60,27 @@ nav {
             position: relative;
 
 
+            &:not(&.notHover)::before, &:not(&.notHover)::after{
+                content: '';
+                position: absolute;
+                height: 48%;
+                transform: scaleY(0) skew(-15deg);
+                width: 100%;
+                @include gradientAnim;
+
+                z-index: 4;
+
+                transition: transform 0.2s ease-in-out;
+            }
             &:not(&.notHover)::before{
-                content: '';
-                position: absolute;
                 top: -10%;
-                height: 48%;
-                transform: scaleY(0) skew(-15deg);
-                width: 100%;
-                background: #2196f3;
-
-                z-index: 4;
-
                 transform-origin: top;
-
-                transition: transform 0.2s ease-in-out;
             }
-            &:hover:not(&.notHover)::before{
-                transform: scaleY(1) skew(-15deg);
-            }
-
             &:not(&.notHover)::after{
-                content: '';
-                position: absolute;
                 bottom: 20%;
-                height: 48%;
-                transform: scaleY(0) skew(-15deg);
-                width: 100%;
-                background: #2196f3;
-
-                z-index: 4;
-
                 transform-origin: bottom;
-
-                transition: transform 0.2s ease-in-out;
             }
-            &:hover:not(&.notHover)::after{
+            &:hover:not(&.notHover)::before, &:hover:not(&.notHover)::after{
                 transform: scaleY(1) skew(-15deg);
             }
 
@@ -133,6 +124,7 @@ ul.dropdown-content {
         color: #000;
         cursor: pointer;
         transition: background 0.4s ease-out, color 0.4s ease-out;
+
         &::before {
             content: '';
             position: absolute;
@@ -140,8 +132,9 @@ ul.dropdown-content {
             left: 0;
             height: 100%;
             width: 0;
-            background: #333;
             transition: width 0.15s ease-in-out;
+
+            background: $alternateColor;
         }
         &.red::before{
             background: #ef5350;
@@ -158,6 +151,7 @@ ul.dropdown-content {
                 transform: translateX(10px);
             }
         }
+
         a, button {
             white-space: nowrap;
             cursor: pointer;
@@ -233,6 +227,19 @@ form{
 
     &:hover{
         box-shadow: 0 13px 23px rgba(0,0,0,0.19), 0 8px 8px rgba(0,0,0,0.23);
+    }
+}
+
+
+/*
+* Anims
+*/
+@keyframes li_anim{
+    from{
+        background-position: 0 0;
+    }
+    to{
+        background-position: 200% 0;
     }
 }
 
