--- a/resources/sass/_addons.scss
+++ b/resources/sass/_addons.scss
@@ -38,3 +38,39 @@
         color: #fff;
     }
 }
+
+.degree_picker{
+    background: #aaa;
+    border: 2px solid blue;
+
+    border-radius: 50%;
+
+    height: 200px;
+    width: 200px;
+
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    &__title{
+        font-size: 4.8rem;
+    }
+
+    &__cursor{
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        background: orange;
+        height: 20px;
+        width: 20px;
+
+        border-radius: 50%;
+    }
+}
+
+
+
