--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1667,7 +1667,7 @@ input {
 
 .degree_picker {
   background: #aaa;
-  border: 2px solid blue;
+  border: 2px solid #2196f3;
   border-radius: 50%;
   height: 200px;
   width: 200px;
