--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -371,7 +371,7 @@
 /*=======================================
 *       Code Samples
 =======================================*/
-.code_sample{
+.code_sample, .export__code_wrapper{
     background: #1e293b;
     border-radius: 2px;
     padding: 1em;
