--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,7 +105,6 @@ ul.dropdown-content {
 }
 ul.dropdown-content li {
   position: relative;
-  padding: 0.8em 3em 0.8em 1.4em;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -138,6 +137,8 @@ ul.dropdown-content li:hover a.red, ul.dropdown-content li:hover button.red {
   color: #ef5350;
 }
 ul.dropdown-content li a, ul.dropdown-content li button {
+  padding: 0.8em 3em 0.8em 1.4em;
+  width: 100%;
   white-space: nowrap;
   cursor: pointer;
   color: #000;
@@ -1289,6 +1290,17 @@ form a {
 .btn__text svg {
   fill: #fff;
   margin-left: 0.6em;
+}
+.btn-small {
+  padding: 0.8rem 1rem;
+}
+.btn__icon {
+  display: flex;
+  align-items: center;
+  transform: skew(30deg);
+}
+.btn__icon svg {
+  fill: #fff;
 }
 .btn__left {
   position: absolute;
@@ -2484,13 +2496,13 @@ input {
 /*=======================================
 *       Code Samples
 =======================================*/
-.code_sample {
+.code_sample, .export__code_wrapper {
   background: #1e293b;
   border-radius: 2px;
   padding: 1em;
   margin: 1em;
 }
-.code_sample__item {
+.code_sample__item, .export__code_wrapper__item {
   font-size: 0.9em !important;
   white-space: pre-wrap !important;
 }
