--- a/resources/sass/_button.scss
+++ b/resources/sass/_button.scss
@@ -31,8 +31,26 @@
     }
 
     &-small{
-        padding: 0.8rem 1rem;
+        padding: 1.8rem 0.5rem 0.5rem 2rem;
     }
+
+
+
+    &-botrightabs{
+        position: absolute;
+        bottom: 0;
+        right: 0;
+
+        clip-path: polygon(100% 0, 100% 100%, 0% 100%);
+
+        transform: skew(0);
+
+        .btn__icon{
+
+            transform: skew(0);
+        }
+    }
+
 
     &__icon{
         display: flex;
@@ -157,6 +175,32 @@
         }
     }
 
+}
+
+
+
+/*=======================================
+*       Unique buttons
+=======================================*/
+#btnToTop{
+    position: relative;
+    bottom: 20px;
+    left: 50%;
+
+    padding: 5px 5px 5px 5px;
+
+    cursor: pointer;
+
+    fill: #fff;
+
+    border: 2px solid #fff;
+    border-radius: 50%;
+
+    transition: padding 0.2s ease;
+
+    &:hover{
+        padding: 5px 2px 5px 8px;
+    }
 }
 
 
