--- a/resources/sass/_addons.scss
+++ b/resources/sass/_addons.scss
@@ -42,11 +42,12 @@
 .degree_picker{
     background: #aaa;
     border: 2px solid $alternateColor;
+    box-shadow: 0 0 0 10px #aaa;
 
     border-radius: 50%;
 
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 100px;
 
     display: flex;
     justify-content: center;
@@ -54,7 +55,7 @@
     position: relative;
 
     &__title{
-        font-size: 4.8rem;
+        font-size: 2.4rem;
     }
 
     &__cursor{
@@ -63,13 +64,37 @@
         left: 50%;
         transform: translate(-50%, -50%);
 
-        background: orange;
+        background: $alternateColor;
         height: 20px;
         width: 20px;
 
         border-radius: 50%;
+
+        cursor: pointer;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
