--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,7 +93,6 @@ nav ul li .header-account--img {
 
 ul.dropdown-content {
   position: absolute;
-  bottom: 0;
   left: 0;
   width: 100%;
   display: none;
@@ -142,6 +141,8 @@ ul.dropdown-content li a, ul.dropdown-content li button {
   cursor: pointer;
   color: #000;
   font-weight: 400;
+  width: 100%;
+  height: 100%;
   transform: translateX(0);
   transition: transform 0.1s ease-in-out, font-weight 0.1s ease-in-out, color 0.1s ease-in-out;
 }
