--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -104,7 +104,6 @@ nav {
 }
 ul.dropdown-content {
     position: absolute;
-    bottom: 0;
     left: 0;
     width: 100%;
     display: none;
@@ -157,6 +156,8 @@ ul.dropdown-content {
             cursor: pointer;
             color: #000;
             font-weight: 400;
+            width: 100%;
+            height: 100%;
             transform: translateX(0);
             transition: transform 0.1s ease-in-out, font-weight 0.1s ease-in-out, color 0.1s ease-in-out;
         }
