--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,7 +142,6 @@ ul.dropdown-content li a, ul.dropdown-content li button {
   cursor: pointer;
   color: #000;
   font-weight: 400;
-  width: 100%;
   height: 100%;
   transform: translateX(0);
   transition: transform 0.1s ease-in-out, font-weight 0.1s ease-in-out, color 0.1s ease-in-out;
@@ -1009,6 +1008,409 @@ form a {
   margin-left: 9.5rem !important;
 }
 
+/*============================
+    Margins
+=============================*/
+.p-0 {
+  padding: 0rem !important;
+}
+
+.pt-0 {
+  padding-top: 0rem !important;
+}
+
+.pr-0 {
+  padding-right: 0rem !important;
+}
+
+.pb-0 {
+  padding-bottom: 0rem !important;
+}
+
+.pl-0 {
+  padding-left: 0rem !important;
+}
+
+.p-05 {
+  padding: 0.5rem !important;
+}
+
+.pt-05 {
+  padding-top: 0.5rem !important;
+}
+
+.pr-05 {
+  padding-right: 0.5rem !important;
+}
+
+.pb-05 {
+  padding-bottom: 0.5rem !important;
+}
+
+.pl-05 {
+  padding-left: 0.5rem !important;
+}
+
+.p-1 {
+  padding: 1rem !important;
+}
+
+.pt-1 {
+  padding-top: 1rem !important;
+}
+
+.pr-1 {
+  padding-right: 1rem !important;
+}
+
+.pb-1 {
+  padding-bottom: 1rem !important;
+}
+
+.pl-1 {
+  padding-left: 1rem !important;
+}
+
+.p-15 {
+  padding: 1.5rem !important;
+}
+
+.pt-15 {
+  padding-top: 1.5rem !important;
+}
+
+.pr-15 {
+  padding-right: 1.5rem !important;
+}
+
+.pb-15 {
+  padding-bottom: 1.5rem !important;
+}
+
+.pl-15 {
+  padding-left: 1.5rem !important;
+}
+
+.p-2 {
+  padding: 2rem !important;
+}
+
+.pt-2 {
+  padding-top: 2rem !important;
+}
+
+.pr-2 {
+  padding-right: 2rem !important;
+}
+
+.pb-2 {
+  padding-bottom: 2rem !important;
+}
+
+.pl-2 {
+  padding-left: 2rem !important;
+}
+
+.p-25 {
+  padding: 2.5rem !important;
+}
+
+.pt-25 {
+  padding-top: 2.5rem !important;
+}
+
+.pr-25 {
+  padding-right: 2.5rem !important;
+}
+
+.pb-25 {
+  padding-bottom: 2.5rem !important;
+}
+
+.pl-25 {
+  padding-left: 2.5rem !important;
+}
+
+.p-3 {
+  padding: 3rem !important;
+}
+
+.pt-3 {
+  padding-top: 3rem !important;
+}
+
+.pr-3 {
+  padding-right: 3rem !important;
+}
+
+.pb-3 {
+  padding-bottom: 3rem !important;
+}
+
+.pl-3 {
+  padding-left: 3rem !important;
+}
+
+.p-35 {
+  padding: 3.5rem !important;
+}
+
+.pt-35 {
+  padding-top: 3.5rem !important;
+}
+
+.pr-35 {
+  padding-right: 3.5rem !important;
+}
+
+.pb-35 {
+  padding-bottom: 3.5rem !important;
+}
+
+.pl-35 {
+  padding-left: 3.5rem !important;
+}
+
+.p-4 {
+  padding: 4rem !important;
+}
+
+.pt-4 {
+  padding-top: 4rem !important;
+}
+
+.pr-4 {
+  padding-right: 4rem !important;
+}
+
+.pb-4 {
+  padding-bottom: 4rem !important;
+}
+
+.pl-4 {
+  padding-left: 4rem !important;
+}
+
+.p-45 {
+  padding: 4.5rem !important;
+}
+
+.pt-45 {
+  padding-top: 4.5rem !important;
+}
+
+.pr-45 {
+  padding-right: 4.5rem !important;
+}
+
+.pb-45 {
+  padding-bottom: 4.5rem !important;
+}
+
+.pl-45 {
+  padding-left: 4.5rem !important;
+}
+
+.p-5 {
+  padding: 5rem !important;
+}
+
+.pt-5 {
+  padding-top: 5rem !important;
+}
+
+.pr-5 {
+  padding-right: 5rem !important;
+}
+
+.pb-5 {
+  padding-bottom: 5rem !important;
+}
+
+.pl-5 {
+  padding-left: 5rem !important;
+}
+
+.p-55 {
+  padding: 5.5rem !important;
+}
+
+.pt-55 {
+  padding-top: 5.5rem !important;
+}
+
+.pr-55 {
+  padding-right: 5.5rem !important;
+}
+
+.pb-55 {
+  padding-bottom: 5.5rem !important;
+}
+
+.pl-55 {
+  padding-left: 5.5rem !important;
+}
+
+.p-6 {
+  padding: 6rem !important;
+}
+
+.pt-6 {
+  padding-top: 6rem !important;
+}
+
+.pr-6 {
+  padding-right: 6rem !important;
+}
+
+.pb-6 {
+  padding-bottom: 6rem !important;
+}
+
+.pl-6 {
+  padding-left: 6rem !important;
+}
+
+.p-65 {
+  padding: 6.5rem !important;
+}
+
+.pt-65 {
+  padding-top: 6.5rem !important;
+}
+
+.pr-65 {
+  padding-right: 6.5rem !important;
+}
+
+.pb-65 {
+  padding-bottom: 6.5rem !important;
+}
+
+.pl-65 {
+  padding-left: 6.5rem !important;
+}
+
+.p-7 {
+  padding: 7rem !important;
+}
+
+.pt-7 {
+  padding-top: 7rem !important;
+}
+
+.pr-7 {
+  padding-right: 7rem !important;
+}
+
+.pb-7 {
+  padding-bottom: 7rem !important;
+}
+
+.pl-7 {
+  padding-left: 7rem !important;
+}
+
+.p-75 {
+  padding: 7.5rem !important;
+}
+
+.pt-75 {
+  padding-top: 7.5rem !important;
+}
+
+.pr-75 {
+  padding-right: 7.5rem !important;
+}
+
+.pb-75 {
+  padding-bottom: 7.5rem !important;
+}
+
+.pl-75 {
+  padding-left: 7.5rem !important;
+}
+
+.p-8 {
+  padding: 8rem !important;
+}
+
+.pt-8 {
+  padding-top: 8rem !important;
+}
+
+.pr-8 {
+  padding-right: 8rem !important;
+}
+
+.pb-8 {
+  padding-bottom: 8rem !important;
+}
+
+.pl-8 {
+  padding-left: 8rem !important;
+}
+
+.p-85 {
+  padding: 8.5rem !important;
+}
+
+.pt-85 {
+  padding-top: 8.5rem !important;
+}
+
+.pr-85 {
+  padding-right: 8.5rem !important;
+}
+
+.pb-85 {
+  padding-bottom: 8.5rem !important;
+}
+
+.pl-85 {
+  padding-left: 8.5rem !important;
+}
+
+.p-9 {
+  padding: 9rem !important;
+}
+
+.pt-9 {
+  padding-top: 9rem !important;
+}
+
+.pr-9 {
+  padding-right: 9rem !important;
+}
+
+.pb-9 {
+  padding-bottom: 9rem !important;
+}
+
+.pl-9 {
+  padding-left: 9rem !important;
+}
+
+.p-95 {
+  padding: 9.5rem !important;
+}
+
+.pt-95 {
+  padding-top: 9.5rem !important;
+}
+
+.pr-95 {
+  padding-right: 9.5rem !important;
+}
+
+.pb-95 {
+  padding-bottom: 9.5rem !important;
+}
+
+.pl-95 {
+  padding-left: 9.5rem !important;
+}
+
 /*=======================================
 *       Positioning
 =======================================*/
@@ -1341,6 +1743,23 @@ form a {
 }
 .btn:hover .btn__left, .btn:hover .btn__right {
   transform: scaleY(1.3);
+}
+
+.btnBotRight {
+  position: relative;
+  padding: 0.8rem 2rem;
+  background: #333;
+  outline: none;
+  border: none;
+  border-top: 8px solid #fff;
+  border-left: 8px solid #fff;
+  font-family: "Montserrat", sans-serif;
+  color: #fff;
+  cursor: pointer;
+  transition: background 0.4s ease;
+}
+.btnBotRight:hover {
+  background: #222;
 }
 
 /*==============================================
@@ -1860,6 +2279,54 @@ input {
   margin: 2em;
   display: flex;
   justify-content: space-around;
+}
+
+.social {
+  margin-bottom: 4em;
+  width: 20%;
+  min-width: 400px;
+  color: #000;
+  position: relative;
+}
+.social_content {
+  padding: 2em;
+  margin: 10px;
+  width: calc(100% - 20px);
+  background: #fff;
+  position: relative;
+  margin-right: auto;
+  margin-left: auto;
+}
+.social_content_header {
+  display: flex;
+  justify-content: space-between;
+  width: 95%;
+  align-items: center;
+}
+.social_content_header p, .social_content_header div > span {
+  font-family: "Montserrat", sans-serif;
+}
+.social_content_header svg {
+  cursor: pointer;
+  margin-right: 20px;
+}
+.social_content_header__title {
+  font-weight: bold;
+  font-size: 1.3rem;
+}
+.social_content_body {
+  height: 12vh;
+  width: 100%;
+  margin-top: 2em;
+  padding: 0;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.social_content_body > .btn > span {
+  pointer-events: none;
 }
 
 .ns_form {
