--- a/resources/sass/_button.scss
+++ b/resources/sass/_button.scss
@@ -105,6 +105,30 @@
 
 }
 
+.btnBotRight{
+    position: relative;
+
+    padding: 0.8rem 2rem;
+
+    background: #333;
+    outline: none;
+    border: none;
+    border-top: 8px solid #fff;
+    border-left: 8px solid #fff;
+
+    @include font('Montserrat');
+    color: #fff;
+
+    cursor: pointer;
+
+    transition: background 0.4s ease;
+
+    &:hover{
+        background: #222;
+    }
+}
+
+
 
 
 /*==============================================
