--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -13,6 +13,7 @@
 
 @import 'gradients';
 @import 'social';
+@import 'customs';
 
 @import 'nostyles';
 
@@ -167,10 +168,6 @@
 
         td{
             height: 40px;
-
-            //display: flex;
-            //align-items: center;
-            //justify-content: center;
 
             span{
                 display: block;
