--- a/resources/sass/_social.scss
+++ b/resources/sass/_social.scss
@@ -51,7 +51,7 @@
             justify-content: flex-end;
             align-items: flex-end;
 
-            & > .btn{
+            & > .btnCopy{
                 & > span{
                     pointer-events: none;
                 }
