--- a/resources/sass/_button.scss
+++ b/resources/sass/_button.scss
@@ -211,7 +211,7 @@
     bottom: 20px;
     left: 50%;
 
-    padding: 5px 5px 5px 5px;
+    padding: 1%;
 
     cursor: pointer;
 
@@ -223,7 +223,7 @@
     transition: padding 0.2s ease;
 
     &:hover{
-        padding: 5px 2px 5px 8px;
+        padding: 1.2%;
     }
 }
 
