--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -104,7 +104,7 @@ nav {
 ul.dropdown-content {
     position: absolute;
     left: 0;
-    width: 100%;
+    width: 200px;
     display: none;
     justify-content: space-evenly;
     flex-direction: column;
